--- a/README
+++ b/README
@@ -1,16 +1,24 @@
 NAME
-    mRuby - A module for you
+    mRuby - mruby binding for perl5.
 
 SYNOPSIS
-      use mRuby;
+        use mRuby;
+
+        my $mrb = mRuby::State->new();
+        my $st = $mrb->parse_string('9');
+        my $n = $mrb->generate_code($st);
+        $st->pool_close();
+        my $ret = $mrb->run($mrb->proc_new($n), undef);
 
 DESCRIPTION
-    mRuby is
+    mRuby is mruby binding for perl5.
 
 AUTHOR
     Tokuhiro Matsuno <tokuhirom AAJKLFJEF@ GMAIL COM>
 
 SEE ALSO
+    mRuby
+
 LICENSE
     Copyright (C) Tokuhiro Matsuno
 
