Import of TOKUHIROM/mRuby-0.05.tar.gz from CPAN.
gitpan-cpan-distribution: mRuby
gitpan-cpan-version:      0.05
gitpan-cpan-path:         TOKUHIROM/mRuby-0.05.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension mRuby
 
+0.05
+
+    - use latest mRuby
+    - include bison's output in distribution tar ball
+
 0.04
 
     - checking c99 feature
